# vsg_cloud_client

CAD_client/: .clang-format  .gitignore  CMakeLists.txt  run.sh  项目说明.md
CAD_client/data/cameraPose/: vsg_pose.txt
CAD_client/data/shaders/: merge.frag  mergeCloud.frag  standard_phong.frag
CAD_client/src/: ARWidget.cpp  ARWidget.h  CADMesh.cpp  CADMesh.h  NvDecoder.cpp  NvDecoder.h  VideoEncodingClient.h  cameraHandler.cpp  encoder.h  interactionHandler.cpp  main.cpp  mainWindowApplication.cpp  mainWindowApplication.h  matWindow.cpp  matWindow.h  receiveServer.h  screenshot.h  stateSwitch.cpp  ui_ARWidget.h  vPacket.grpc.pb.h  vPacket.pb.cc  vPacket.pb.h
CAD_client/src/ui/: ARWidget.ui  mainWindowApplication.ui  matWindow.ui
VSG_Cloud_communication/: CMakeLists.txt  run.sh
VSG_Cloud_communication/data/: .gitignore
VSG_Cloud_communication/data/shaders/: merge.frag
VSG_Cloud_communication/src/: CADMesh.cpp  CADMesh.h  main.cpp  screenshot.h  vPacket.grpc.pb.cc  vPacket.proto  vsgRenderer.h
VSG_Cloud_communication/src/RenderFlatBuffer/: Geo.cs  Instance.cs  Material.cs  Model.cs  Proto.cs  RenderFlatBufferDoc.cs
